// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be structurally sound when active 1`] = `
<vime-fullscreen-control class="hidden">
  <vime-control hidden="" keys="f" label="Fullscreen" pressed="">
    <vime-icon href="#vime-exit-fullscreen"></vime-icon>
    <vime-tooltip position="top">
      Exit fullscreen (f)
    </vime-tooltip>
  </vime-control>
</vime-fullscreen-control>
`;

exports[`should be structurally sound when not active 1`] = `
<vime-fullscreen-control class="hidden">
  <vime-control hidden="" keys="f" label="Fullscreen">
    <vime-icon href="#vime-enter-fullscreen"></vime-icon>
    <vime-tooltip position="top">
      Enter fullscreen (f)
    </vime-tooltip>
  </vime-control>
</vime-fullscreen-control>
`;
